--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:
 test-job1:
   stage: test
   script:
-    - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath . -testResults C:\temp\PlaymodeResults.xml
+    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath . -testResults C:\temp\PlaymodeResults.xml
 
 test-job2:
   stage: test
