--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:
 test-job1:
   stage: test
   script:
-    - "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -runTests -batchmode -testPlatform editmode -projectPath . -testResults PlaymodeResults.xml
+    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath . -testResults PlaymodeResults.xml
 
 test-job2:
   stage: test
