--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:
 test-job1:
   stage: test
   script:
-    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath . -testResults PlaymodeResults.xml
+    - Start-Process Unity.exe  -ArgumentList "-batchmode -projectPath . -runTests -testPlatform editmode -logFile -testResults ./unit-tests.xml"
 
 test-job2:
   stage: test
