--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:
 test-job1:
   stage: test
   script:
-    - Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe"  -ArgumentList "-batchmode -projectPath . -runTests -testPlatform editmode -logFile -testResults ./unit-tests.xml"
+    - echo %PATH%
 
 test-job2:
   stage: test
