Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,9 @@ unit-test:
   variables:
     ErrorActionPreference: Stop
   script:
-    - Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-batchmode -projectPath . -runTests -testPlatform editmode -logFile -testResults ./unit-tests.xml" -Wait | Out-Default
-    - '[xml]$xml = Get-Content -PATH ./unit-tests.xml'
-    - $result = $xml.SelectSingleNode("//test-run.result").InnerText
-    - if ("Passed" -ne $result) { throw }
+    - Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-batchmode -projectPath . -runTests -testPlatform editmode -logFile -testResults unit-tests.xml" -Wait | Out-Default
+    - '[xml]$xml = Get-Content -PATH unit-tests.xml'
+    
 
 unity-build:
   stage: build
