--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,9 @@ test-job1:
   script:
     - echo $Env:Path
     - echo $Env:UserName
-    - Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-runTests -batchmode -testPlatform editmode -projectPath . -logFile -testResults PlaymodeResults.xml"
+    - Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-runTests -batchmode -testPlatform editmode -projectPath . -logFile -testResults ./PlaymodeResults.xml"
     - dir ece651Project
-    - '[xml]$xml = Get-Content -PATH ./ece651Project/PlaymodeResults.xml'
+    - '[xml]$xml = Get-Content -PATH ./PlaymodeResults.xml'
   artifacts:
     when: always
     paths:
