--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ build-job:
 
 test-job1:
   stage: test
-  before_script: $env:Path = $env:Path + ";C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe"
+  before_script:
+    - $env:Path = $env:Path + ";C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe\"
   script:
     - echo $Env:Path
     - echo $Env:UserName
