--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ test-job1:
   script:
     - echo $Env:Path
     - echo $Env:UserName
-    - Start-Process "E:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe\" || "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-runTests -batchmode -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml" -Wait | Out-Default
+    - Start-Process "E:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-runTests -batchmode -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml" -Wait | Out-Default || Start-Process "C:\Program Files\Unity\Hub\Editor\2020.3.25f1\Editor\Unity.exe" -ArgumentList "-runTests -batchmode -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml" -Wait | Out-Default
 
 
 test-job2:
