Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test-job1:
   script:
     - echo $Env:Path
     - echo $Env:UserName
-    - Unity.exe -runTests -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
+    - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
     - echo dir
   artifacts:
     when: always
