--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ test-job1:
     - echo $Env:Path
     - echo $Env:UserName
     - dir
-    - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath . -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
+    - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath ./ece651Project  -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
     - echo dir
   artifacts:
     when: always
