--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,20 @@
+stages:
+  - build
+  - test
+
 build-job:
   stage: build
   script:
     - echo "Hello, World"
 
-test-job1:
+EditModetest-job:
   stage: test
   
   script:
-    - echo $Env:Path
-    - echo $Env:UserName
-    - dir
-    - echo %Env:UNITY_HOME%
-    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
+    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./EditmodeResults.xml -Wait | Out-Default
 
-
-test-job2:
+PlayModetest-job:
   stage: test
+  
   script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-
-deploy-prod:
-  stage: deploy
-  script:
-    - echo "This job deploys something from the branch."
+    - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath ./ece651Project  -logFile -testResults ./PlaymodeResults.xml -Wait | Out-Default
