--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,14 @@ stages:
 build-job:
   stage: build
   script:
-    - echo "Hello, World"
+    - echo "Not yet implemented"
 
 EditModetest-job:
   stage: EditTest
   
   script:
-    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./EditmodeResults.xml -Wait | Out-Default
+    - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./ece651Project/EditmodeResults.xml -Wait | Out-Default
+    - dir
 
 PlayModetest-job:
   stage: PlayTest
