--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,10 @@ EditModetest-job:
   
   script:
     - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./ece651Project/EditmodeResults.xml -Wait | Out-Default
-    - dir
+    - artifacts:
+      paths:
+        - ./ece651Project/EditmodeResults.xml
+      expire_in: 1 week
 
 PlayModetest-job:
   stage: PlayTest
