--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ EditModetest-job:
   
   script:
     - Unity.exe -runTests -batchmode -testPlatform editmode -projectPath ./ece651Project  -logFile -testResults ./ece651Project/EditmodeResults.xml -Wait | Out-Default
-    
+    - dir ./ece651Projec
   artifacts:
     paths:
       - ./ece651Project/EditmodeResults.xml
