--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ EditModetest-job:
   
   script:
     - cd .\ece651Project\
-    - Unity.exe -runTests -batchmode   -testResults EditmodeResults.xml | Out-Default
+    - Unity.exe -runTests -testPlatform playmode -batchmode -projectPath . -testResults EditmodeResults.xml | Out-Default
   artifacts:
     paths:
       - EditmodeResults.xml
