--- a/ece651Project/Assets/PlayModeTests/Tests.asmdef
+++ b/ece651Project/Assets/PlayModeTests/Tests.asmdef
@@ -5,7 +5,9 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "PlayerRelatedScripts",
-        "Animations"
+        "Animations",
+        "AntScript",
+        "Flyscript"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
