--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,8 @@ PlayModetest-job:
   
   script:
     - Unity.exe -runTests -batchmode -testPlatform playmode -projectPath ./ece651Project  -logFile -testResults ./PlaymodeResults.xml | Out-Default
+  
+  artifacts:
+    paths: 
+      - .\ece651Project\PlaymodeResults.xml 
+    expire_in: 1 week
