--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,14 @@ build-job:
     - Unity.exe -quit -batchmode -logfile buildLog.xml -executeMethod BuildScript.PerformBuild | Out-Default
   artifacts:
     paths:
-      - .\buildLog.xml
+      - .\ece651Project\buildLog.xml
     expire_in: 3 days
 
 EditModetest-job:
   stage: EditTest
   
   script:
+    - cd .\ece651Project\
     - Unity.exe -runTests -testPlatform editmode -batchmode -projectPath . -testResults -logFile  EditmodeResults.xml | Out-Default
 
   artifacts:
